--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Yannick's Resume</title>
+</head>
+<body>
+                        <h1>YANNICK MASSIVI</h1>
+                        <p>1616 5th St.,Apt 10</p>
+                        <p>Coralville, IA 52241</p>
+                        <p><hr>yanmassivi@gmail.com</hr></p>
+                        
+  <h2>career Objective</h2>
+          <p> Manage IT projects in the future</p>
+  <h2>Education</h2>
+          <p>Kirkwood Community College, Cedar Rapids, IA
+	        <p>Network and System Administration, A.A.S Degree 05/11/2019</p>
+          <p>3.856/4.00 GPA</p>
+  <h2>Computer Skills</h2>
+          <h3>Hardware: </h3>
+	               <ul>
+                 <li>Computer assembling and maintenance.</li> 
+                 <li>Troubleshooting hardware and software problems.</li>
+                 <li>Installing and configuring the peripherals, components and drivers.</li>
+                 <li>Installing software and application to user standards.</li>
+                 <li>Wide knowledge of motherboard and circuit designs of monitor.</li>
+                 <li>Deep knowledge of printer and cartage refilling.</li>
+                 </ul>
+          <h3>Software:</h3>
+                 <ul>
+                 <li>Spreadsheets/Excel 2013/2016</li>
+                 <li>Word 2013/2016</li> 
+                 <li>PowerPoint 2013/2016</li>
+                 <li>Microsoft Access 2013/2016</li>
+                 <li>QuickBooks</li>
+                 <li>Email</li>
+	               <li>Web and Social Skills</li>
+                 <li>Graphic and Writing Skills.
+                 </ul>
+  <h2>Professional Experience</h2>
+
+  <p>2017-Present	Grubhub, Iowa City, IA </p>
+                      <p><strong>Independent Contractor</strong></p>
+                      <ul>
+                      <li>Pick up food from restaurant and deliver to the customers.</li>
+                      <li>Make sure with the restaurant that customer has what they ordered.</li>
+                      </ul>
+  <p>2016-2017	Ruffalo Noel Levitz, Coralville, IA </p>
+                      <p><strong>Call Representative</strong></p>
+                      <ul>
+                      <li>Called students on behalf of universities to talk to them about the programs offered and encourage them to apply.</li>
+                      <li>Did fund soliciting for scholarship offered by different universities.</li>
+                      </ul>
+  <p>2015-2016	Alpla, Iowa City, IA </p>
+                      <p><strong/> Team Leader</strong></p>
+                      <ul>
+                      <li>Established open and professional relationships with members which helped resolve issues and conflicts quickly.</li>
+                      <li>Coached team members to operate the machines used in the plant effectively.</li>
+	                    <li>Implement new working processes that delivered continued improvements.</li>
+	                    <li>Strategically scheduled team members to maintain optimal staffing levels at all times.</li>
+                      <li>Communicated clear expectations and goals to each team member.</li>
+                      </ul>
+
+  <h2>Organization</h2>
+            <ul>
+            <li> Member of Phi Theta Kappa since August 2017. </li>
+            <li> Member of ESCSEL club since August 2018. </li>
+            </ul>
+
+  <h2>Awards</h2>
+            <ul>
+            <li>Recipient of Kirkwood Scholarship for Academic Achievement 2018 </li>
+            <li>Recipient of project start scholarship for Academic Achievement 2018 </li>
+            <li>Recipient of ECSEL scholarship for Academic Achievement 2018 </li>
+            <li>Dean’s List Fall 2017 </li>
+            <li>Dean’s List Spring 2018 </li>
+            <li>Dean’s List Summer 2018 </li>
+            <li>Dean’s List Spring 2019 </li>
+            <li>Dean's List Summer 2019 </li>
+            </ul>
+  <h2>Certifications</h2>
+            <ul>
+            <li>Network and System Administration certificate from Kirkwood Community college </li>
+            <li>Certified Nurse Assistant from Kirkwood Community College </li>
+            </ul>
+
+  <h2>References</h2>
+
+  <p><strong>Mayele Thino</strong></p>
+  <p>Product Manager Specialist</p>
+  <p>Tellemate Inc</p>
+  <p>316 Crescent Woode Dr</p>
+  <p>Hiram, GA 30157</p>
+  <p>(470) 213-9758</p>
+  <p>thinomayele@icloud.com</p>
+
+  <p><strong>Ray Whitfield</strong></p>
+  <p>Supervisor</p>
+  <p>West Liberty Food</p>
+  <p>2225 E Commerce Dr</p>
+  <p>Mt Pleasant, IA 52641</p>
+  <p>(314) 478-8780</p>
+  <p>raywhitfield@yahoo.com</p>
+
+  <p><strong>Shadrac Kadiayi</strong></p> 
+  <p>Data Analyst</p>
+  <p>United Healthcare</p>
+  <p>1311 W President George Bush HWY</p>
+  <p>Richardson, TX 75080</p>
+  <p>(319) 512-1916</p>
+  <p>kshadrac@hotmail.com</p>
+
+  
+
 
