--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
                         <h1>YANNICK MASSIVI</h1>
                         <p>1616 5th St.,Apt 10</p>
                         <p>Coralville, IA 52241</p>
-                        <p><hr>yanmassivi@gmail.com</hr></p>
+                        <p>yanmassivi@gmail.com</p>
                         
-  <h2>career Objective</h2>
+	<h2><hr>career Objective</hr></h2>
           <p> Manage IT projects in the future</p>
   <h2>Education</h2>
           <p>Kirkwood Community College, Cedar Rapids, IA
