--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Yannick's Resume</title>
 </head>
 <body>
-                        <h1>YANNICK MASSIVI</h1>
+	<h1><hr>YANNICK MASSIVI</hr></h1>
                         <p>1616 5th St.,Apt 10</p>
                         <p>Coralville, IA 52241</p>
                         <p>yanmassivi@gmail.com</p>
                         
-	<h2><hr>career Objective</hr></h2>
+	<h2>career Objective</h2>
           <p> Manage IT projects in the future</p>
   <h2>Education</h2>
           <p>Kirkwood Community College, Cedar Rapids, IA
