--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+div.a{
+    text-align:center
+}
+</style>
   <meta charset="UTF-8">
   <title>Yannick's Resume</title>
 </head>
 <body>
-	<h1><hr>YANNICK MASSIVI</hr></h1>
-                        <p>1616 5th St.,Apt 10</p>
-                        <p>Coralville, IA 52241</p>
-                        <p>yanmassivi@gmail.com</p>
-                        
+<div class="a">
+<h1>YANNICK MASSIVI</h1>
+<p>1616 5th St.,Apt 10</p>
+<p>Coralville, IA 52241</p>
+<p>yanmassivi@gmail.com</p>
+</div>
 	<h2>career Objective</h2>
           <p> Manage IT projects in the future</p>
   <h2>Education</h2>
