--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <title>Yannick's Resume</title>
 </head>
 <body>
+  <nav>
+  <ul>
+	  <li><a href="index.html">My Resume</a></li>
+	  <li><a href="my life motivation.html">My life motivation</a></li>
+	  <li><a href="my travels.html">My travels</a></li>
+
 <h1>YANNICK MASSIVI</h1>
 <p>1616 5th St.,Apt 10</p>
 <p>Coralville, IA 52241</p>
