--- a/my life motivation.html
+++ b/my life motivation.html
@@ -1,1 +1,28 @@
-# Pro
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Yannick's Resume</title>
+</head>
+<body>
+<h1>MY LIFE MOTIVATIONS</h1>
+<p>i have many posts that inspire me to stay on track and motivated</p>
+<p>Here are 3 that always make me think and get me to want to move to the next level</p>
+<img src="pic1.jpeg"width="480"height="800">
+<p>we all go trough situations that we wish had never happened to us, but once a wise man said i quote:"you don't grow in good times"</p>  
+
+<img src="pic2.jpeg"width="480"height="800">
+<p>This is reminds me that no doing it, is being selfish because whatever we were meant to do is useless if we never act upon and as a result, the all world will never see that thing the only us were gifted with.</p>
+
+<img src="pic3.png"width="480"height="800">
+<p>This last one is favorite one, i used to be very reactive after being offended by a person but that changed after reading this.
+<p>A wise man once said, "whoever controls your emotion or reaction controls you"
+
+<p>Hope you learned something by reading this.
+
+<p>Pictures source:</P>
+    <ul>
+    <li><a href="https://www.google.com/search?q=life+motivation+quotes&rlz=1C5CHFA_enUS771US771&sxsrf=ACYBGNTjnDRIlB1jvOsOQ02QQuIaxl6BOA:1568053629955&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjCquj8rsTkAhVBhOAKHUpUDnwQ_AUIEigB&biw=1440&bih=821#">Picture 1</a></li>
+    <li><a href="https://www.google.com/search?q=life+motivation+quotes&rlz=1C5CHFA_enUS771US771&sxsrf=ACYBGNTjnDRIlB1jvOsOQ02QQuIaxl6BOA:1568053629955&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjCquj8rsTkAhVBhOAKHUpUDnwQ_AUIEigB&biw=1440&bih=821#">Picture 2</a></li>
+    <li><a here="https://www.google.com/search?q=life+motivation+quotes&rlz=1C5CHFA_enUS771US771&sxsrf=ACYBGNTjnDRIlB1jvOsOQ02QQuIaxl6BOA:1568053629955&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjCquj8rsTkAhVBhOAKHUpUDnwQ_AUIEigB&biw=1440&bih=821#">Picture 3</a></li>
+    </ul>
