--- a/My travels.html
+++ b/My travels.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yannick's Resume</title>
+  <title>MY TRAVELS</title>
 </head>
 <body>
 <h1>MY TRAVELS</h1>
@@ -13,7 +13,7 @@
 <img src="DRC.jpg"width="480"height="600">
 <p>This picture is to give to an idea of what it looks like</p>  
 
-<p>In South Africa, i lived in Cape Town, check the video posted to see our beautiful is this place .</p>
+<p>In South Africa, i lived in Cape Town for 5 years, check the video posted to see our beautiful is this place .</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/a66LSbwbLKs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Source:</P>
