Update my life motivation.html

--- a/my life motivation.html
+++ b/my life motivation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yannick's Resume</title>
+  <title>MY LIFE MOTIVATION</title>
 </head>
 <body>
 <h1>MY LIFE MOTIVATIONS</h1>
