--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	  <li><a href="index.html">My Resume</a></li>
 	  <li><a href="my life motivation.html">My life motivation</a></li>
 	  <li><a href="my travels.html">My travels</a></li>
+	  </ul>
+	</nav>
 
 <h1>YANNICK MASSIVI</h1>
 <p>1616 5th St.,Apt 10</p>
