--- a/My travels.html
+++ b/My travels.html
@@ -5,6 +5,13 @@
   <title>MY TRAVELS</title>
 </head>
 <body>
+   <nav>
+  <ul>
+	  <li><a href="index.html">My Resume</a></li>
+	  <li><a href="my life motivation.html">My life motivation</a></li>
+	  <li><a href="my travels.html">My travels</a></li>
+	  </ul>
+	</nav>
 <h1>MY TRAVELS</h1>
 <p>i have seen 3 continents so far and i am being to see more before i kick the bucket</p>
 <p>Here i will be only showing you what Africa looks like</p>
