--- a/my life motivation.html
+++ b/my life motivation.html
@@ -5,6 +5,13 @@
   <title>MY LIFE MOTIVATION</title>
 </head>
 <body>
+   <nav>
+  <ul>
+	  <li><a href="index.html">My Resume</a></li>
+	  <li><a href="my life motivation.html">My life motivation</a></li>
+	  <li><a href="my travels.html">My travels</a></li>
+	  </ul>
+	</nav>
 <h1>MY LIFE MOTIVATIONS</h1>
 <p>i have many posts that inspire me to stay on track and motivated</p>
 <p>Here are 3 that always make me think and get me to want to move to the next level</p>
