--- a/My travels.html
+++ b/My travels.html
@@ -17,12 +17,11 @@
 <p>Here i will be only showing you what Africa looks like</p>
 <p>Born in Africa, i was lucky to have lived to 2 countries there, RDCongo and South Africa</p>
 <p>In DRCongo ,i lived in Kinshasa the capital</p>
-<img src="DRC.jpg"width="480"height="600">
+<img src="DRC.png"width="480"height="600">
 <p>This picture is to give to an idea of what it looks like</p>  
 
 <p>In South Africa, i lived in Cape Town for 5 years, check the video posted to see our beautiful is this place .</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/a66LSbwbLKs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Source:</P>
     <ul>
     <li><a href="https://www.africa.com/heres-what-you-need-to-know-about-congo-kinshasa/">DRCongo</a></li>
