--- a/my travels.html
+++ b/my travels.html
@@ -20,7 +20,8 @@
 <img src="DRC.png"width="480"height="600">
 <p>This picture is to give to an idea of what it looks like</p>  
 
-<p>In South Africa, i lived in Cape Town for 5 years, check the video posted to see our beautiful is this place .</p>
+<p>In South Africa, i lived in Cape Town for 5 years, check the video posted to see how beautiful is this place .</p>
+<iframe width="966" height="543" src="https://www.youtube.com/embed/a66LSbwbLKs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p>Source:</P>
     <ul>
