--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       <li>Did fund soliciting for scholarship offered by different universities.</li>
                       </ul>
   <p>2015-2016	Alpla, Iowa City, IA </p>
-                      <p><strong/> Team Leader</strong></p>
+                      <p><strong> Team Leader</strong></p>
                       <ul>
                       <li>Established open and professional relationships with members which helped resolve issues and conflicts quickly.</li>
                       <li>Coached team members to operate the machines used in the plant effectively.</li>
