--- a/mytravels.html
+++ b/mytravels.html
@@ -17,11 +17,13 @@
 <p>Here i will be only showing you what Africa looks like</p>
 <p>Born in Africa, i was lucky to have lived to 2 countries there, RDCongo and South Africa</p>
 <p>In DRCongo ,i lived in Kinshasa the capital</p>
-<img src="DRC.png" Alt="DRC" width="480"height="600">
+<img src="DRC.png" Alt="DRC" width="480"height="600"/>
 <p>This picture is to give to an idea of what it looks like</p>  
 
 <p>In South Africa, i lived in Cape Town for 5 years, check the video posted to see how beautiful is this place .</p>
-<iframe width="966" height="543" src="https://www.youtube.com/embed/a66LSbwbLKs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="966" height="543" 
+  src="https://www.youtube.com/embed/a66LSbwbLKs">
+</iframe>
 
 <p>Source:</P>
     <ul>
