--- a/mylifemotivation.html
+++ b/mylifemotivation.html
@@ -21,7 +21,7 @@
 	<img src="Media/PIC2.png" alt="PIC2" width="480" height="600"/>
 <p>This is reminds me that no doing it, is being selfish because whatever we were meant to do is useless if we never act upon and as a result, the all world will never see that thing the only us were gifted with.</p>
 
-<img src="pic3.png" alt="Media/pic3.png" width="480" height="600"/>
+<img src="Media/pic3.png" alt="pic3.png" width="480" height="600"/>
 <p>This last one is favorite one, i used to be very reactive after being offended by a person but that changed after reading this.
 <p>A wise man once said, "whoever controls your emotion or reaction controls you"
 
