--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	  <h2>career Objective</h2>
       <p> Manage IT projects in the future</p>
     <h2>Education</h2>
-      <p>Kirkwood Community College, Cedar Rapids, IA
-	    <p>Network and System Administration, A.A.S Degree 05/11/2019</p>
+	<p>Kirkwood Community College, Cedar Rapids, IA</p>
+	<p>Network and System Administration, A.A.S Degree 05/11/2019</p>
       <p>3.856/4.00 GPA</p>
     <h2>Computer Skills</h2>
       <h3>Hardware: </h3>
@@ -65,8 +65,8 @@
             <ul>
               <li>Established open and professional relationships with members which helped resolve issues and conflicts quickly.</li>
               <li>Coached team members to operate the machines used in the plant effectively.</li>
-	            <li>Implement new working processes that delivered continued improvements.</li>
-	            <li>Strategically scheduled team members to maintain optimal staffing levels at all times.</li>
+	      <li>Implement new working processes that delivered continued improvements.</li>
+	      <li>Strategically scheduled team members to maintain optimal staffing levels at all times.</li>
               <li>Communicated clear expectations and goals to each team member.</li>
              </ul>
 
