--- a/mylifemotivation.html
+++ b/mylifemotivation.html
@@ -33,4 +33,5 @@
         <li><a href="https://www.success.com/15-inspiring-quotes-about-living-your-life-on-purpose/">Picture 2</a></li>
         <li><a href="https://www.keepinspiring.me/positive-inspirational-life-quotes/">Picture 3</a></li>
       </ul>
- </body>    
+ </body> 
+</html>
