--- a/mytravels.html
+++ b/mytravels.html
@@ -30,5 +30,8 @@
       <li><a href="https://www.africa.com/heres-what-you-need-to-know-about-congo-kinshasa/">DRCongo</a></li>
       <li><a href="https://youtu.be/a66LSbwbLKs">Cape Town</a></li>
      </ul>
+  </body>
+</html>
+
 
 
